benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_Add_Zeroes_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_Add_Zeroes.rs
Time: 2025-09-15 10:51:39

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:59:28
   |
59 |             if s.index(i + j as int) == '1' {
   |                            ^^^^^^^^

error[E0425]: cannot find function `str_to_u64` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:87:17
   |
87 |     let mut b = str_to_u64(sx@);
   |                 ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `str_to_u64` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:106:59
    |
106 |                 result = (((result as i128 * b as i128) % str_to_u64(sz@) as i128) as u64);
    |                                                           ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `str_to_u64` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:108:45
    |
108 |             b = (((b as i128 * b as i128) % str_to_u64(sz@) as i128) as u64);
    |                                             ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `nat_to_binary` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:113:15
    |
113 |     let res = nat_to_binary(result);
    |               ^^^^^^^^^^^^^ not found in this scope

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:59:28
   |
59 |             if s.index(i + j as int) == '1' {
   |                            ^^^^^^^^

error[E0425]: cannot find function `str_to_u64` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:87:17
   |
87 |     let mut b = str_to_u64(sx@);
   |                 ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `str_to_u64` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:106:59
    |
106 |                 result = (((result as i128 * b as i128) % str_to_u64(sz@) as i128) as u64);
    |                                                           ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `str_to_u64` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:108:45
    |
108 |             b = (((b as i128 * b as i128) % str_to_u64(sz@) as i128) as u64);
    |                                             ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `nat_to_binary` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_Zeroes_impl.rs:113:15
    |
113 |     let res = nat_to_binary(result);
    |               ^^^^^^^^^^^^^ not found in this scope

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0425`.
